--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,12 +63,9 @@ jobs:
 
       - name: Decode Keystore
         run: |
-          echo "${{ secrets.SIGNING_KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
+          echo "${{ secrets.SIGNING_KEYSTORE_BASE64 }}" | base64 -d > app/keystore.jks
         env:
           SIGNING_KEYSTORE_BASE64: ${{ secrets.SIGNING_KEYSTORE_BASE64 }}
-
-      - name: Run Tests
-        run: ./gradlew test
 
       - name: Run Lint
         run: ./gradlew lint
