--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -87,4 +87,4 @@ jobs:
           tag_name: ${{ github.ref_name }}
           files: app/build/outputs/apk/release/app-release.apk
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
